tests/NormalTests/paczka1/small_fuzzy/75232179.err
Error in line 1: ZrkD03 S987 68,4
Error in line 2: ZrkD03 S828 41,5
Error in line 15: J7ZOTL S987 90,41
